--- a/iBiblia.lpi
+++ b/iBiblia.lpi
@@ -150,10 +150,11 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="formPrincipal"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="2"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="355"/>
-        <CursorPos Y="375"/>
+        <TopLine Value="242"/>
+        <CursorPos Y="261"/>
         <UsageCount Value="207"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -164,8 +165,8 @@
         <UnitName Value="Versiculo"/>
         <EditorIndex Value="9"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="736"/>
-        <CursorPos X="14" Y="740"/>
+        <TopLine Value="937"/>
+        <CursorPos X="44" Y="963"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -188,11 +189,10 @@
         <Filename Value="projeto.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Projeto"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="5"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="319"/>
-        <CursorPos Y="346"/>
+        <TopLine Value="1280"/>
+        <CursorPos Y="1296"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -425,130 +425,130 @@
         <WindowIndex Value="1"/>
         <TopLine Value="461"/>
         <CursorPos Y="480"/>
-        <UsageCount Value="14"/>
+        <UsageCount Value="15"/>
         <Loaded Value="True"/>
       </Unit25>
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="978" TopLine="957"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="375" TopLine="355"/>
       </Position1>
       <Position2>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1044" TopLine="1025"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="566" Column="24" TopLine="534"/>
       </Position2>
       <Position3>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1045" TopLine="1025"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="591" Column="64" TopLine="559"/>
       </Position3>
       <Position4>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1046" TopLine="1025"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="642" Column="56" TopLine="625"/>
       </Position4>
       <Position5>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1048" TopLine="1025"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="107" Column="15" TopLine="89"/>
       </Position5>
       <Position6>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1049" TopLine="1025"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="261" TopLine="237"/>
       </Position6>
       <Position7>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1050" TopLine="1025"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="113" Column="15" TopLine="95"/>
       </Position7>
       <Position8>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="976" TopLine="957"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="413" Column="28" TopLine="382"/>
       </Position8>
       <Position9>
         <Filename Value="projeto.pas"/>
-        <Caret Line="978" TopLine="957"/>
+        <Caret Line="188" Column="82" TopLine="171"/>
       </Position9>
       <Position10>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1044" TopLine="1025"/>
+        <Caret Line="392" Column="33" TopLine="368"/>
       </Position10>
       <Position11>
         <Filename Value="projeto.pas"/>
-        <Caret Line="320" TopLine="300"/>
+        <Caret Line="393" Column="30" TopLine="368"/>
       </Position11>
       <Position12>
         <Filename Value="projeto.pas"/>
-        <Caret Line="321" TopLine="300"/>
+        <Caret Line="69" Column="32" TopLine="50"/>
       </Position12>
       <Position13>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1045" TopLine="1027"/>
+        <Caret Line="137" Column="15" TopLine="119"/>
       </Position13>
       <Position14>
         <Filename Value="projeto.pas"/>
-        <Caret Line="129" Column="17" TopLine="112"/>
+        <Caret Line="1265" Column="3" TopLine="1271"/>
       </Position14>
       <Position15>
         <Filename Value="projeto.pas"/>
-        <Caret Line="130" Column="30" TopLine="112"/>
+        <Caret TopLine="155"/>
       </Position15>
       <Position16>
         <Filename Value="projeto.pas"/>
-        <Caret Line="610" Column="20" TopLine="578"/>
+        <Caret Line="137" Column="15" TopLine="119"/>
       </Position16>
       <Position17>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="944" Column="35" TopLine="912"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="740" Column="14" TopLine="736"/>
       </Position17>
       <Position18>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1096" Column="35" TopLine="1064"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="37" Column="14" TopLine="18"/>
       </Position18>
       <Position19>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1336" Column="7" TopLine="1305"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="56" Column="26" TopLine="26"/>
       </Position19>
       <Position20>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1102" TopLine="1082"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="114" Column="100" TopLine="84"/>
       </Position20>
       <Position21>
         <Filename Value="projeto.pas"/>
-        <Caret Line="93" Column="15" TopLine="76"/>
+        <Caret Line="1296" TopLine="1280"/>
       </Position21>
       <Position22>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="342" Column="17" TopLine="323"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="261" TopLine="243"/>
       </Position22>
       <Position23>
         <Filename Value="projeto.pas"/>
-        <Caret Line="344" Column="56" TopLine="323"/>
+        <Caret Line="1296" TopLine="1280"/>
       </Position23>
       <Position24>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1102" TopLine="1083"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="261" Column="33" TopLine="243"/>
       </Position24>
       <Position25>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1336" Column="5" TopLine="1305"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="413" Column="77" TopLine="382"/>
       </Position25>
       <Position26>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="952" TopLine="932"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="261" TopLine="242"/>
       </Position26>
       <Position27>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1050" TopLine="1032"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="966" TopLine="937"/>
       </Position27>
       <Position28>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="983" TopLine="964"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="740" TopLine="721"/>
       </Position28>
       <Position29>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1054" TopLine="1035"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="963" Column="34" TopLine="937"/>
       </Position29>
       <Position30>
         <Filename Value="projeto.pas"/>
-        <Caret Line="952" TopLine="932"/>
+        <Caret Line="1296" TopLine="1280"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
@@ -591,14 +591,14 @@
         <WatchScope Value="wpsLocal"/>
         <WatchKind Value="wpkWrite"/>
         <Source Value="projeto.pas"/>
-        <Line Value="1519"/>
+        <Line Value="1504"/>
       </Item2>
       <Item3>
         <Kind Value="bpkSource"/>
         <WatchScope Value="wpsLocal"/>
         <WatchKind Value="wpkWrite"/>
         <Source Value="projeto.pas"/>
-        <Line Value="1450"/>
+        <Line Value="1435"/>
       </Item3>
       <Item4>
         <Kind Value="bpkSource"/>
@@ -612,14 +612,14 @@
         <WatchScope Value="wpsLocal"/>
         <WatchKind Value="wpkWrite"/>
         <Source Value="projeto.pas"/>
-        <Line Value="1573"/>
+        <Line Value="1558"/>
       </Item5>
       <Item6>
         <Kind Value="bpkSource"/>
         <WatchScope Value="wpsLocal"/>
         <WatchKind Value="wpkWrite"/>
         <Source Value="projeto.pas"/>
-        <Line Value="1659"/>
+        <Line Value="1644"/>
       </Item6>
     </BreakPoints>
     <Watches Count="1">
